[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Intro.gd" type="Script" id=1]
[ext_resource path="res://src/Todo.gd" type="Script" id=2]
[ext_resource path="res://assets/Titlescreen/z_JumpyBird.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Settings.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/bird.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/coin_a1.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/slice_UI_00.png" type="Texture" id=8]
[ext_resource path="res://assets/Fonts/NotoSans.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Fonts/NotoSans-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = -1
font_data = SubResource( 1 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Todo" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="JumpyBird" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Settings" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
script = ExtResource( 4 )

[node name="Header" type="Panel" parent="Settings"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -730.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="Settings/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="ItemPanel" type="Panel" parent="Settings"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -730.0
margin_top = 120.0
margin_right = -30.0
margin_bottom = 550.0

[node name="ItemList" type="ItemList" parent="Settings/ItemPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 690.0
margin_bottom = 420.0
hint_tooltip = "Choose the setting you wish to adjust."
mouse_default_cursor_shape = 2
items = [ "Resolution", ExtResource( 5 ), false, "Controls", ExtResource( 6 ), false, "Sound", ExtResource( 7 ), false ]
allow_reselect = true
auto_height = true
max_columns = 2
fixed_column_width = 320
fixed_icon_size = Vector2( 64, 64 )

[node name="InfoPanel" type="Panel" parent="Settings"]
margin_left = 30.0
margin_top = 30.0
margin_right = 510.0
margin_bottom = 150.0

[node name="Details" type="Label" parent="Settings/InfoPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "Text about item goes here, it's supposed to be pretty long and give you a good idea of what it does."
align = 3
valign = 1
autowrap = true

[node name="Selected" type="Label" parent="Settings/InfoPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -52.0
margin_right = 240.0
text = "1280 x 720"
align = 1
valign = 1
autowrap = true

[node name="Divider" type="NinePatchRect" parent="Settings/InfoPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 8.0
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Container" type="Container" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -255.0
margin_right = 700.0

[node name="PlayButton" type="Button" parent="Container"]
margin_left = 10.0
margin_right = 690.0
margin_bottom = 110.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 9 )
shortcut_in_tooltip = false
text = "Start!"

[node name="SettingsButton" type="Button" parent="Container"]
margin_left = 10.0
margin_top = 120.0
margin_right = 690.0
margin_bottom = 190.0
mouse_default_cursor_shape = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="Container"]
margin_left = 10.0
margin_top = 200.0
margin_right = 690.0
margin_bottom = 242.0
mouse_default_cursor_shape = 8
text = "Close Game"

[node name="QuitDialogue" type="ConfirmationDialog" parent="."]
margin_left = 480.0
margin_top = 390.0
margin_right = 780.0
margin_bottom = 470.0
window_title = "Leave the game?"
dialog_text = "Are you sure you want to quit?"

[node name="TestButton" type="Button" parent="."]
margin_left = 1142.96
margin_top = 667.146
margin_right = 1267.96
margin_bottom = 707.146
text = "Test Level"
[connection signal="pressed" from="Container/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Container/SettingsButton" to="Settings" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Container/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="TestButton" to="." method="_on_TestButton_pressed"]
